--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" href="http://static.sasongsmat.nu/fonts/vegetarian.css" />
   <!-- google api fonts -->
   <link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&display=swap" rel="stylesheet">
+
+
+
   <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
 
 
